# mrn-math

./: README.md  meson.build
math/: constants.hpp  matrix.hpp  vector.hpp
tests/: doctest.h  matrix_ops.cpp  meson.build  vector_ops.cpp
